# trial-fastai

./: README.md  pyproject.toml  tutorial.py
