[tool.poetry]
name = "trial-fastai"
version = "0.1.0"
description = ""
authors = ["Shunpoco <tkngsnsk313320@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.1"
torchvision = "^0.11.2"
torchaudio = "^0.10.1"
fastai = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
